ionic angular initial skeliton

--- a/store/src/theme/variables.scss
+++ b/store/src/theme/variables.scss
@@ -1,2 +1,13 @@
 // For information on how to create your own theme, please see:
 // http://ionicframework.com/docs/theming/
+:root {
+  --ion-color-primary: #6c5ce7;
+  --ion-color-secondary: #00b894;
+  --ion-font-family: 'Poppins', system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial;
+}
+
+/* Add a simple textile/pattern helper (repeat image or CSS pattern) */
+.bg-pattern {
+  background-image: radial-gradient(rgba(255,255,255,0.04) 1px, transparent 1px);
+  background-size: 20px 20px;
+}
