--- a/store/src/app/pages/orders/orders.page.html
+++ b/store/src/app/pages/orders/orders.page.html
@@ -1,4 +1,5 @@
-<app-toolbar title="Products"></app-toolbar>
+<app-toolbar title="Orders"></app-toolbar>
 
 <ion-content [fullscreen]="true">
+
 </ion-content>
