--- a/store/src/theme/variables.scss
+++ b/store/src/theme/variables.scss
@@ -1,7 +1,7 @@
 // For information on how to create your own theme, please see:
 // http://ionicframework.com/docs/theming/
 :root {
-  --ion-color-primary: #6c5ce7;
+  --ion-color-primary: #1e3432; // darkslategrey
   --ion-color-secondary: #00b894;
   --ion-font-family: 'Poppins', system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial;
 }
