added add to cart and change the design of the order page and cart page

--- a/store/src/app/pages/home/home.page.html
+++ b/store/src/app/pages/home/home.page.html
@@ -20,7 +20,6 @@
             [routerLink]="['/tabs/products']">
         <div class="category-image" [style.background-image]="'url(' + category.image + ')'"></div>
         <h3>{{category.name}}</h3>
-        <p>{{category.description}}</p>
         <ion-button fill="clear" class="shop-category-btn"  [routerLink]="['/tabs/products']">Shop Now</ion-button>
       </div>
     </div>
@@ -66,7 +65,7 @@
     <div class="value-item">
       <ion-icon name="shirt"></ion-icon>
       <h3>Premium Fabrics</h3>
-      <p>100% Cotton & Premium Blends</p>
+      <p>Premium Blends</p>
     </div>
     <div class="value-item">
       <ion-icon name="cut"></ion-icon>
